Use wl-clipboard with tmux; TIL about --use-remote-sudo.

--- a/home-manager/achuie/config/tmux/tmux.conf
+++ b/home-manager/achuie/config/tmux/tmux.conf
@@ -68,9 +68,9 @@ bind-key -T copy-mode-vi : run-shell "tmux split-window -h -l 3 -b 'echo $$ >/tm
     run-shell -b "kill $(cat /tmp/tmux_line_number_pid)"
 
 # Copy to and from system clipboard
-bind-key -T copy-mode-vi Y send-keys -X copy-pipe-and-cancel "xclip -r" \; display-message "Copied to selection"
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -r -selection clipboard" \; display-message "Copied to clipboard"
-bind-key C-p run-shell "xclip -o | tmux load-buffer - && tmux paste-buffer"
+bind-key -T copy-mode-vi Y send-keys -X copy-pipe-and-cancel "wl-copy -n -p" \; display-message "Copied to selection"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy -n" \; display-message "Copied to clipboard"
+bind-key C-p run-shell "wl-paste | tmux load-buffer - && tmux paste-buffer"
 
 # Create new window at current directory
 bind c new-window -c "#{pane_current_path}"
